# mymusic

./: .gitignore  LICENSE  README.md  settings.gradle.kts
.github/actions/: build.yml
app/: build.gradle.kts  code_deobfuscation_analysis.md  ikunshare.keystore  lint-baseline.xml  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Mverify.cpp  Mverify.h  base64.cpp  base64.h  md5.cpp  md5.h  signer.cpp  signer.h
app/src/main/cpp/base64/: base64.cpp  base64.h
app/src/main/cpp/md5/: md5.h
app/src/main/java/utils/: AESUtils.java  AppUpdateManager.java  AppValidator.java  CheckBoxHolder.java  CommonUtils.java  ContextHolder.java  CrashHandler.java  DialogFactory.java  DialogHelper.java  DownloadUtils.java  FileUtils.java  GlobalData.java  HistoryManager.java  (+17 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
player/: APPAplication.smali  FlowLayout.smali  LrcView$a.smali  LrcView$b$a.smali  LrcView$b.smali  LrcView$c$a.smali  LrcView$c.smali  LrcView$d.smali  LrcView$e.smali  LrcView$f.smali  LrcView$g.smali  LrcView$h.smali  LrcView.smali  a.smali  b.smali  i.smali  ll.smali  musicurl.smali  p$a.smali  p$b.smali  p$c.smali  p$d.smali  p$e$a$a.smali  p$e$a.smali  p$e$b.smali  p$e.smali  p$f.smali  p$g.smali  p$h.smali  p$i.smali  p$j$a.smali  p$j.smali  p$k.smali  p.smali  player$a.smali  player$b.smali  player$c.smali  player$d.smali  player$e.smali  player$f.smali  (+14 more)
(+153 files in other folders)
